fixed the styles for our services section on mobile

--- a/src/assets/sass/salmon.scss
+++ b/src/assets/sass/salmon.scss
@@ -127,6 +127,7 @@
             position: relative;
             display: flex;
             flex-direction: column;
+            align-items: center;
             background-color: var(--secondary);
             border-radius: 27px;
             overflow: hidden;
@@ -149,24 +150,35 @@
         padding-bottom: 79px;
         z-index: 1;
     }
-
-    .image-bacground {
-        display: block;
+    .img-wrapper{
+        display: flex;
+        justify-content: center;
         position: relative;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        height: 100%;
-        max-width: 100%;
+        max-width: 661px;
+        width: 100%;
+        padding-left: 41px;
+        padding-right: 41px;
+        padding-top: 0;
+        padding-bottom: 79px;
 
+        .image-bacground {
+            display: block;
+            position: relative;
+            max-width: 100%;
+            border-top-left-radius: 26px;
+            border-bottom-left-radius: 26px;
+            border-top-right-radius: 26px;
+            border-bottom-right-radius: 26px;
+            overflow: hidden;
+    
             img {
-                width: 100%;
-                height: 100%;
                 position: relative;
                 display: block;
+                width: 120%;
+                height: 120%;
                 object-fit: cover;
             }
-    
+        }
     }
 }
 
@@ -176,15 +188,28 @@
         .cs-container {
             .wrapper {
                 flex-direction: row;
+                justify-content: space-between;
 
-                .image-bacground {
-                    display: block;
-                    position: absolute;
-                    right: 0;
-                    top: 0;
-                    bottom: 0;
-                    height: 100%;
-                    max-width: 515px;
+                .img-wrapper{
+                    justify-content: end;
+                    max-width: 600px;
+                    padding-left: 0;
+                    padding-right: 0;
+                    padding-top: 0;
+                    padding-bottom: 0;
+
+                    .image-bacground {
+                        max-width: 100%;
+                        width: 505px;
+                        height: 505px;
+                        border-top-left-radius: 100%;
+                        border-bottom-left-radius: 100%;
+    
+                        img {
+                            width: 110%;
+                            height: 110%;
+                        }
+                    }
                 }
             }
 
